# sparse-vs-patricia

./: .eslintrc  .gitignore  README.md  package.json  tsconfig.json
SMT/: smt.go  smt_test.go
go-exec/: .gitignore  go.mod  go.sum  main.go
go-exec/trie/: trie_cache.go
rust-exec/: .gitignore  Cargo.toml
rust-exec/cita-trie/: Cargo.toml
rust-exec/cita-trie/src/: db.rs  lib.rs  trie.rs
rust-exec/src/: bench_tree.rs  main.rs  patricia_wrap.rs  sparse_tree.rs
src/: instruction.ts  main.ts  test_suite.ts
