[package]
name = "rust-exec"
version = "0.1.0"
authors = ["MROS <yc1043@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cita_trie = { path = "./cita-trie" }
hasher = "0.1.2"
hex = "0.3.2"
tempdir = "0.3.7"
leveldb = "0.8.4"
hashbrown = "0.6.0"
